# Multilayer-Perceptron

./: CMakeLists.txt  README.md  install.sh
1_weight_hidden/ImageProcessing/: Makefile  binary.c  binary.h
1_weight_hidden/NeuralNetwork/Network/: network.c  network.h  save.c  save.h
1_weight_hidden/NeuralNetwork/OCR/: OCR  OCR.c  OCR.d  Save.txt
1_weight_hidden/NeuralNetwork/Tools/: image_matrice.c  image_matrice.h  matrice.c  matrice.h
1_weight_hidden/NeuralNetwork/XOR/: Makefile  Save.txt  XOR.c
1_weight_hidden/Segmentation/: Makefile  segmentation  segmentation.c
ImageProcessing/: pixel_operations.h
NeuralNetwork/Network/: network.h
NeuralNetwork/OCR/: Save.txt
NeuralNetwork/Tools/: image_matrice.c  matrice.h
NeuralNetwork/XOR/: Makefile  XOR  XOR.c
Segmentation/: save_letter.c
n_weight_hidden/ImageProcessing/: binary  binary.d  binary.h  test.js
n_weight_hidden/NeuralNetwork/Network/: network.c  save.c
n_weight_hidden/NeuralNetwork/OCR/: Makefile  OCR  OCR.c
n_weight_hidden/NeuralNetwork/Tools/: matrice.c
n_weight_hidden/NeuralNetwork/XOR/: Save.txt  XOR.d
n_weight_hidden/Segmentation/: segmentation  segmentation.c  segmentation.d
src/: CMakeLists.txt  main.c
src/ImageProcessing/: CMakeLists.txt  Makefile  binary.c  binary.h
src/NeuralNetwork/Network/: CMakeLists.txt  network.c  save.c
src/NeuralNetwork/OCR/: CMakeLists.txt  OCR  OCR.c  OCR.h
src/NeuralNetwork/Tools/: CMakeLists.txt  image_matrice.h  matrice.c
src/NeuralNetwork/XOR/: XOR
src/Segmentation/: .gdb_history  CMakeLists.txt  save_letter.c  save_letter.h  segmentation.c  segmentation.h
